[package]
name = "asherpa"
version = "0.0.1"
edition = "2021"
authors = [
  "Guilherme Castelão <guilherme@castelao.net>",
  "Luiz Irber <luiz.irber@gmail.com>"
  ]
description = "Asynchronous download of support data"
license = "MIT OR Apache-2.0"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
futures = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = [ "rustls-tls" ] }
tokio = { version = "1.38", features = ["fs"] }
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["rt", "macros"] }
