[package]
name = "asherpa"
version = "0.0.1"
authors = [
  "Guilherme Castelão <guilherme@castelao.net>",
  "Luiz Irber <luiz.irber@gmail.com>"
  ]
edition = "2024"
rust-version = "1.85.0"
description = "Asynchronous download of support data"
documentation = "https://docs.rs/asherpa"
readme = "README.md"
repository = "https://github.com/castelao/asherpa"
license = "MIT OR Apache-2.0"
keywords = ["async", "async-data", "download", "async-download"]
categories = ["asynchronous", "data-structures", "development-tools"]
include = ["src/*.rs"]

[dependencies]
dirs = "5.0.1"
futures = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = [ "rustls-tls" ] }
tokio = { version = "1.38", default-features = false, features = ["fs"] }
tracing = "0.1.40"

[dev-dependencies]
tempfile = "3.9.0"
tokio = { version = "1.38", features = ["rt", "macros"] }
